# rithikaisafool_website

./: .env.example  .gitignore  .vercelignore  GOOGLE_CALENDAR_SETUP.md  GOOGLE_SHEETS_SETUP.md  next.config.ts  package-lock 2.json  package-lock.json  package.json  tailwind.config.ts
app/: globals.css  layout.tsx  loading.tsx  page.backup.tsx  page.tsx
components/: AnimatedGrid.tsx  AnimatedHero.tsx  Eyes.tsx  (+19 more)
public/assets/please-hold/docs/ESP32-S3-AUDIO-Board-Demo/ESP-IDF/factory_01/main/: CMakeLists.txt  idf_component.yml  main.c
public/assets/please-hold/docs/ESP32-S3-AUDIO-Board-Demo/ESP-IDF/factory_01/main/rgb_led_driver/: rgb_led_driver.c  rgb_led_driver.h
public/assets/please-hold/docs/ESP32-S3-AUDIO-Board-Demo/ESP-IDF/factory_01/main/speech_det_driver/: mic_speech.c
public/assets/please-hold/docs/ESP32-S3-AUDIO-Board-Demo/ESP-IDF/lvgl9_3_example_04/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
public/assets/please-hold/docs/ESP32-S3-AUDIO-Board-Demo/ESP-IDF/lvgl9_3_example_04/main/audio_play_driver/: audio_driver.h
public/assets/please-hold/docs/ESP32-S3-AUDIO-Board-Demo/ESP-IDF/lvgl9_3_example_04/main/camera_driver/: camera_driver.c  camera_driver.h
public/assets/please-hold/docs/ESP32-S3-AUDIO-Board-Demo/ESP-IDF/lvgl9_3_example_04/main/hardeware_driver/: bsp_board.h
public/assets/please-hold/docs/ESP32-S3-AUDIO-Board-Demo/ESP-IDF/lvgl9_3_example_04/main/lcd_driver/: lcd_driver.c  lcd_driver.h
public/assets/please-hold/docs/ESP32-S3-AUDIO-Board-Demo/ESP-IDF/lvgl9_3_example_04/main/lvgl_driver/: lvgl_driver.c  lvgl_driver.h
public/assets/please-hold/docs/ESP32-S3-AUDIO-Board-Demo/ESP-IDF/lvgl9_3_example_04/main/lvgl_ui/: lvgl_example.c  lvgl_example.h
public/assets/please-hold/docs/ESP32-S3-AUDIO-Board-Demo/ESP-IDF/lvgl9_3_example_04/main/lvgl_ui/lvgl_music/: lvgl_music.c  lvgl_music_list.c  lvgl_music_main.c
public/assets/please-hold/docs/ESP32-S3-AUDIO-Board-Demo/ESP-IDF/lvgl9_3_example_04/main/speech_det_driver/: mic_speech.c  mic_speech.h
public/assets/please-hold/docs/ESP32-S3-AUDIO-Board-Demo/ESP-IDF/lvgl9_3_example_04/main/touch_driver/: touch_driver.c  touch_driver.h
public/assets/please-hold/docs/ESP32-S3-AUDIO-Board-Demo/ESP-IDF/lvgl9_3_example_04/main/touch_driver/CST328/: CST328.c  CST328.h
public/assets/please-hold/docs/ESP32-S3-AUDIO-Board-Demo/ESP-IDF/lvgl9_3_example_04/main/touch_driver/CST816/: CST816.c  CST816.h
public/assets/please-hold/docs/ESP32-S3-AUDIO-Board-Demo/ESP-IDF/mp3_play_03/main/: CMakeLists.txt  idf_component.yml  main.c
(+240 files in other folders)
